# plaude-cli

./: .gitignore  .promptkit.yaml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  rustfmt.toml
.agents/skills/perf/: SKILL.md
.agents/skills/re-apk-dive/: SKILL.md
.agents/skills/re-ble-recon/: SKILL.md
.agents/skills/re-discover/: SKILL.md
.agents/skills/re-phase/: SKILL.md
.agents/skills/re-wifi-probe/: SKILL.md
.claude/commands/: bug.md  implement.md  re-hci-capture.md  re-spec.md  researcher.md
.github/workflows/: ci.yml
.promptkit/backups/1775431085/: AGENTS.md
.promptkit/backups/1775431085/.agents/skills/implement/: SKILL.md
.promptkit/backups/1775431085/.agents/skills/perf/: SKILL.md
.promptkit/backups/1775431085/.agents/skills/roadmap/: SKILL.md
.promptkit/backups/1775431085/.claude/commands/: generalize.md  journey.md
crates/plaud-auth/: Cargo.toml
crates/plaud-auth/src/: btsnoop.rs  chain_store.rs  constants.rs  file_store.rs  fingerprint.rs  keyring_store.rs  lib.rs
crates/plaud-auth/tests/: btsnoop_parser.rs  chain_store.rs  file_store.rs  fingerprint.rs
crates/plaud-domain/: Cargo.toml
crates/plaud-domain/src/: auth.rs  battery.rs  device.rs  discovery.rs  lib.rs  recording.rs  setting.rs  storage.rs
crates/plaud-domain/tests/: auth_token.rs  battery_level.rs  device_info.rs  device_model.rs  device_serial.rs  discovery.rs  firmware_version.rs  recording.rs  recording_id.rs  setting.rs  storage_stats.rs
crates/plaud-llm/: Cargo.toml
crates/plaud-llm/src/: chunk.rs  config.rs  correct.rs  lib.rs  provider.rs  summarize.rs  template.rs
crates/plaud-proto/: Cargo.toml
crates/plaud-proto/src/: constants.rs  decode.rs  error.rs  frame.rs  lib.rs  opcode.rs
crates/plaud-proto/src/encode/: auth.rs  device.rs  file.rs  metadata.rs  mod.rs  recording.rs  settings.rs
crates/plaud-proto/tests/: auth_decode.rs  auth_encode.rs  auth_write_decode.rs  bulk_decode.rs  control_decode.rs  control_encode.rs  device_encode.rs  file_encode.rs  handshake_decode.rs  roundtrip.rs
crates/plaud-proto/tests/fixtures/: README.md
crates/plaud-sim/: Cargo.toml
crates/plaud-sim/src/: bulk.rs  constants.rs  device.rs  discovery.rs  lib.rs  state.rs  transport.rs
crates/plaud-sim/tests/: auth.rs  battery.rs  bulk_frames.rs  determinism.rs  device_info.rs  discovery.rs  injection.rs  privacy.rs  record_control.rs  recordings.rs  settings.rs  storage.rs
crates/plaud-sync/: Cargo.toml
crates/plaud-sync/src/: lib.rs
crates/plaud-transport/: Cargo.toml
crates/plaud-transport-ble/: Cargo.toml
crates/plaud-transport-ble/src/: battery.rs  bulk.rs  channel.rs  constants.rs  discovery.rs  lib.rs  session.rs  transport.rs
crates/plaud-transport-ble/src/backend/: adapter.rs  mod.rs
crates/plaud-transport-ble/src/bootstrap/: bluer_peripheral.rs  loopback.rs  mod.rs  session.rs
crates/plaud-transport-ble/tests/: auth_flow.rs  battery_transport.rs  bootstrap_session.rs  bulk_reassembly.rs  control_roundtrip.rs  discovery.rs  transport_unsupported.rs
crates/plaud-transport-usb/: Cargo.toml
crates/plaud-transport-usb/src/: constants.rs  lib.rs  listing.rs  model_txt.rs  transport.rs  wav.rs
crates/plaud-transport-usb/tests/: transport_usb.rs
crates/plaud-transport-wifi/: Cargo.toml
crates/plaud-transport-wifi/src/: lib.rs
crates/plaud-transport/src/: auth_store.rs  discovery.rs  error.rs  lib.rs  transport.rs
crates/plaud-transport/tests/: error.rs  trait_object_safety.rs
crates/plaude-cli/: Cargo.toml
crates/plaude-cli/src/: main.rs
crates/plaude-cli/src/commands/: auth.rs  backend.rs  battery.rs  correct.rs  decode.rs  device.rs  files.rs  llm.rs  mod.rs  output.rs  record.rs  settings.rs  summaries.rs  summarize.rs  template.rs  transcribe.rs
crates/plaude-cli/src/commands/sync/: mod.rs  state.rs
crates/plaude-cli/tests/: e2e_auth.rs  e2e_auth_bootstrap.rs  e2e_battery.rs  e2e_correct.rs  e2e_device_info.rs  e2e_device_privacy.rs  e2e_exit_codes.rs  e2e_files_list.rs  e2e_files_pull.rs  e2e_help.rs  e2e_llm.rs  e2e_no_args.rs  e2e_record.rs  e2e_settings.rs  e2e_summaries.rs  e2e_summarize.rs  e2e_sync.rs  e2e_template.rs  e2e_transcribe.rs  e2e_version.rs
docs/protocol/: ble-commands.md  ble-gatt.md  file-formats.md  overview.md  wifi-fast-transfer.md
docs/usage/: auth-bootstrap.md  auth.md  battery.md  device-info.md  exit-codes.md  files.md  index.md  llm.md  record.md  settings.md  sync.md  transcribe.md  troubleshooting.md  usb.md
specs/journeys/: JOURNEY-L1-llm-config-provider.md  JOURNEY-L2-template-system.md  JOURNEY-L3-transcript-chunking.md  JOURNEY-L4-summarization-pipeline.md  JOURNEY-L5-summary-management.md  JOURNEY-L6-transcript-correction.md  JOURNEY-L7-batch-summarization.md
specs/llm-features/: ARCHITECTURE-PROPOSAL.md  ROADMAP.md  SPEC.md
specs/plaude-cli-v1/: PLAN.md  README.md  ROADMAP.md
specs/plaude-cli-v1/journeys/: M00-scaffold.md  M01-domain-traits.md  M02-proto-codec.md  M03-sim-v0.md  M04-auth-storage.md  M05-transport-ble.md  M06-battery-device-info.md  M07-files-list-pull.md  M08-auth-bootstrap-peripheral.md  M09-sync.md  M10-transport-usb.md  M11-settings-record-control.md  M12-hardening.md  M15-whisper-transcribe.md
specs/re/: backlog.md
specs/re/apk-notes/3.14.0-620/: architecture.md  auth-token.md  ble-protocol.md
specs/re/captures/ble-gatt/: 2026-04-05-hci0-plaud-note-r0-partial.md
specs/re/captures/ble-live-tests/: 2026-04-05-token-validation.md
specs/re/captures/ble-live-tests/scripts/: plaud-test2.py  plaud-test2b.py  plaud-test2c.py
specs/re/captures/btsnoop/: 2026-04-05-plaud-0day-pair.md  2026-04-05-plaud-sync-session.md  sanitisation.md
specs/re/captures/usb/: 2026-04-05-plaud-note-v0095-baseline.md  2026-04-05-plaud-note-v0095-first-recording.md
specs/transcription/: ROADMAP.md  SPEC.md
