[package]
name = "plaud-domain"
description = "Pure domain types for plaude-cli: recordings, devices, settings."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
