[package]
name = "plaud-llm"
description = "Multi-provider LLM abstraction for plaude-cli (Ollama, OpenAI, Anthropic)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
genai = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jiff = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
