[package]
name = "plaud-proto"
description = "Pure codec for the tinnotech pen-BLE wire protocol used by Plaud devices."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
plaud-domain = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
