[package]
name = "plaud-sync"
description = "High-level sync orchestrator for plaude-cli (idempotent mirror of device recordings)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
