[package]
name = "plaud-transport"
description = "Transport, discovery, and auth-store traits for plaude-cli."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
plaud-domain = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
